[package]
name = "taproot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31.1", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
secp256k1 = { version = "0.28.2", features = ["rand", "hashes", "serde", "global-context"] }
sha2 = "0.10.8"
